[project]
name = "langchain-user-authn"
version = "1.0.0"
description = """\
An example CLI tool in Python demonstrating how to integrate Pangea's AuthN \
and AuthZ services into a LangChain app to filter out RAG documents based on \
user permissions. \
"""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.2.1",
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langchain>=0.3.27",
    "pangea-sdk>=6.4.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
    "python-magic>=0.4.27",
    "unstructured[md]>=0.18.14",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
